implemented a simple search but currently has a SQL injection issue to be fixed

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,7 +23,7 @@
         </p>
 
       </header>
-      <%= render partial: 'products/search'%>
+      <%= render partial: 'products/search_form'%>
       <%= yield %>
       <footer style='margin-top: 5%'>Copyright Francis Cruz for Frank's Cafe 2020</footer>
     </div>
