updated search to fix SQL injection and styled the search

--- a/app/views/products/search.html.erb
+++ b/app/views/products/search.html.erb
@@ -1,4 +1,4 @@
-<p>
+<p style='margin-top: 7px; margin-bottom: 10px'>
   Found <%= pluralize(@products.size, 'results') %>
   for the word "<%= params[:search_term] %>".
 </p>
