--- a/app/views/products/_search_form.html.erb
+++ b/app/views/products/_search_form.html.erb
@@ -1,7 +1,13 @@
-<div style="margin-bottom: 12px">
+<div style="margin-top: 12px">
+
 <%= form_with(url: search_path, local: true, method: "get") do %>
-  <%= label_tag(:q, "Search for:") %>
-  <%= text_field_tag(:search_term) %>
-  <%= submit_tag("Search") %>
+  <div class="field has-addons">
+    <div class="control">
+      <%= text_field_tag(:search_term, nil, class: 'input', placeholder: 'Search for product') %>
+    </div>
+    <div class="control">
+      <%= submit_tag("Search", class: 'button is-info') %>
+    </div>
+  </div>
 <% end %>
 </div>
